Styling fixes for code cleanness